<resources>
    <string name="app_name">SubSplit App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="total_cost">Total Cost</string>
    <string name="renewal_interval">Renewal Interval</string>
    <string name="subscription_name">Subscription Name</string>
    <string name="category">Category</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="individual_subscription">Individual Subscription</string>
    <string name="group_subscription">Continue to Group Payment</string>
    <string name="title_activity_delete_sub">DeleteSub</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>