<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="fill_vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60px"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="#ec796c"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/back_arrow" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20px"
                android:layout_marginHorizontal="50px"
                android:text="Create Subscription"
                android:gravity="left"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_regular"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="fill"
            android:layout_weight=".8">
            <ImageView
                android:id="@+id/add_icon"
                android:layout_width="400dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:src="@drawable/add"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="30px"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/subscription_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/subscription_name"
                    android:layout_marginRight="20dp"
                    android:padding="15dp"
                    android:fontFamily="@font/roboto_regular"
                    android:background="@drawable/et_custom"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:layout_weight="1"/>
                <Spinner
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/category"
                    android:layout_marginRight="20dp"
                    android:padding="15dp"
                    android:fontFamily="@font/roboto_regular"
                    android:background="@drawable/et_custom"
                    android:textSize="15sp"
                    android:layout_marginVertical="50px"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <EditText
                android:id="@+id/total_cost"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:hint="@string/total_cost"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:padding="15dp"
                android:fontFamily="@font/roboto_regular"
                android:background="@drawable/et_custom"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:layout_weight=".5"/>
            <Spinner
                android:id="@+id/renewal_interval"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:hint="@string/renewal_interval"
                android:layout_marginRight="20dp"
                android:padding="15dp"
                android:fontFamily="@font/roboto_regular"
                android:background="@drawable/et_custom"
                android:textSize="15sp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight=".5">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign-up Date"
                android:fontFamily="@font/roboto_regular"
                android:textSize="15sp"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <!-- Spinner Element -->
            <Spinner
                android:id="@+id/month"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:hint="@string/month"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="20dp"
                android:fontFamily="@font/roboto_regular"
                android:background="@drawable/et_custom"
                android:textSize="15sp"
                android:layout_weight="1"/>
            <Spinner
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:hint="@string/day"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="15dp"
                android:fontFamily="@font/roboto_regular"
                android:background="@drawable/et_custom"
                android:textSize="15sp"
                android:layout_weight="1"/>
            <Spinner
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:hint="@string/year"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:fontFamily="@font/roboto_regular"
                android:background="@drawable/et_custom"
                android:textSize="15sp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">
            <Button
                android:id="@+id/individual_subscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_custom"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@android:color/black"
                android:text="@string/individual_subscription"
                android:paddingVertical="140px"
                android:drawableTop="@drawable/user"
                android:textAllCaps="false"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/group_subscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_custom"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@android:color/black"
                android:text="@string/group_subscription"
                android:paddingVertical="140px"
                android:drawableTop="@drawable/group_"
                android:textAllCaps="false"
                android:layout_weight="1"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="10dp"
            android:background="#000000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/user"></ImageButton>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/group"></ImageButton>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/buttonbordersel"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/add"></ImageButton>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/community"></ImageButton>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/settings"></ImageButton>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
